@@ -370,7 +370,22 @@ e_notification_image_new(void)
    E_Notification_Image *img;
 
    img = calloc(1, sizeof(E_Notification_Image));
+   img->bits_per_sample = 8;
    return img;
+}
+
+EAPI Eina_Bool
+e_notification_image_init(E_Notification_Image *img, Evas_Object *obj)
+{
+   EINA_SAFETY_ON_NULL_RETURN_VAL(img, EINA_FALSE);
+   EINA_SAFETY_ON_NULL_RETURN_VAL(obj, EINA_FALSE);
+   evas_object_geometry_get(obj, NULL, NULL, &img->width, &img->height);
+   img->has_alpha = !!evas_object_image_alpha_get(obj);
+   img->channels = img->has_alpha ? 4 : 3;
+   img->rowstride = evas_object_image_stride_get(obj);
+   img->data = evas_object_image_data_get(obj, EINA_FALSE);
+   evas_object_image_data_set(obj, img->data);
+   return EINA_TRUE;
 }
 
 EAPI void
